--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "REST API Server for my Special Problem Application: WaiDe: A Multi Service Mobile Application for Micro and Small Businesses in the town of Batong Malake, Los Banos, Laguna.",
   "main": "server.js",
   "scripts": {
-    "dev": "node server.js",
+    "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,11 +18,16 @@
   },
   "homepage": "https://github.com/hwgyii/waide-api#readme",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "dayjs": "^1.11.11",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
+    "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
-    "mongoose": "^8.2.1"
+    "mongoose": "^8.2.1",
+    "nodemon": "^3.1.0",
+    "uniqid": "^5.4.0"
   }
 }
