--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "lodash": "^4.17.21",
     "mongoose": "^8.2.1",
     "nodemon": "^3.1.0",
+    "pdfmake": "^0.2.10",
     "uniqid": "^5.4.0"
   }
 }
