--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cors": "^2.8.5",
     "dayjs": "^1.11.11",
     "dotenv": "^16.4.5",
+    "expo-server-sdk": "^3.10.0",
     "express": "^4.18.3",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
